--- a/Index.html
+++ b/Index.html
@@ -49,17 +49,17 @@
           <div class="project-card">
             <h3>Proyecto 4</h3>
             <p>Descripción del proyecto.</p>
-            <a href="Proyecto4/Index.html" target="_blank">Ver Proyecto <link href=Index.html"> </a>
+            <a href="Proyecto4/Index.html" target="_blank">Ver Proyecto <link href="Proyecto4/Index.html"> </a>
           </div>
           <div class="project-card">
             <h3>Proyecto 5</h3>
             <p>Descripción del proyecto.</p>
-            <a href="Proyecto1.html" target="_blank">Ver Proyecto <link href="Proyecto1.html"> </a>
+            <a href="Proyecto3/Index.html" target="_blank">Ver Proyecto <link href="Proyecto3/Index.html"> </a>
           </div>
           <div class="project-card">
             <h3>Proyecto 6</h3>
             <p>Descripción del proyecto.</p>
-            <a href="Proyecto1.html" target="_blank">Ver Proyecto <link href="Proyecto1.html"> </a>
+            <a href="Proyecto3/Index.html" target="_blank">Ver Proyecto <link href="Proyecto3/Index.html"> </a>
           </div>
       </div>
     </div>
